# basic-mmo-rpg

./: .gitignore  AGENTS.md  CHARACTER_SKILLS.md  NOTIONS.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
assets/maps/: demo_town.json  starter_map.json  starter_map.json.bak
scripts/: run_client.py  run_map_editor.py  run_server.py
src/basic_mmo_rpg/: __init__.py
src/basic_mmo_rpg/client/: __init__.py  app.py  camera.py  network.py  rendering.py  ui.py
src/basic_mmo_rpg/domain/: __init__.py  entities.py  equipment.py  geometry.py  inventory.py  movement.py  skills.py  tiles.py
src/basic_mmo_rpg/server/: __init__.py  app.py  world.py
src/basic_mmo_rpg/shared/: __init__.py  protocol.py
src/basic_mmo_rpg/storage/: __init__.py  characters.py  map_loader.py
tests/: test_characters.py  test_client_prediction.py  test_client_rendering.py  test_geometry.py  test_map_editor.py  test_map_loader.py  test_movement.py  test_multiplayer_world.py  test_network_client.py  test_protocol.py  test_skills.py  test_websocket_server.py
tools/: __init__.py
tools/map_editor/: __init__.py  app.py  entities.py  map_io.py  rendering.py  state.py  viewport.py
