[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-mmo-rpg"
version = "0.1.0"
description = "Small 2D online RPG / UO-like prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.0",
    "websockets>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
    "mypy>=1.10",
]

[project.scripts]
mmo-client = "basic_mmo_rpg.client.app:main"
mmo-server = "basic_mmo_rpg.server.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["basic_mmo_rpg"]
strict = true
warn_unused_ignores = true
